--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
     "react-select": "^3.1.0",
     "react-table": "6.10.0",
     "react-tagsinput": "3.19.0",
-    "reactstrap": "8.0.0"
+    "reactstrap": "8.0.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.2"
   },
   "browserslist": [
     ">0.2%",
