left: dynamic row color

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-bootstrap-sweetalert": "4.4.1",
     "react-bootstrap-switch": "15.5.3",
     "react-bootstrap-table-next": "^4.0.0",
+    "react-bootstrap-table2-editor": "^1.4.0",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-bootstrap-table2-toolkit": "^2.1.2",
     "react-bootstrap-wizard": "0.0.7",
